Fixing an overlapping issue
Fixing an overlapping issue

--- a/src/components/FormattedEditor.css
+++ b/src/components/FormattedEditor.css
@@ -62,7 +62,7 @@ gap: 1rem;
 
 .hint-editor {
   overflow: hidden;
-  padding-top: 20px;
+  padding-top: 40px;
 }
 
 .btn {
